--- a/HUGO/config.toml
+++ b/HUGO/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.com"
+baseurl = "https://qawarrior.github.io"
 title = "QAWarrior Freelance Developer"
 copyright = "&copy; 2016 Paul H Cassidy"
 theme = "academic"
